--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
     sdk: flutter
   equatable: ^2.0.7
   flutter_easyloading: ^3.0.5
+  flutter_iconly: ^1.0.2
 
 dev_dependencies:
   flutter_test:
