--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   equatable: ^2.0.7
   flutter_easyloading: ^3.0.5
   flutter_iconly: ^1.0.2
+  dartz: ^0.10.1
+  verification_code: ^0.0.4
 
 dev_dependencies:
   flutter_test:
